--- a/app/assets/stylesheets/recurring_select.scss
+++ b/app/assets/stylesheets/recurring_select.scss
@@ -1,3 +1,6 @@
+/*
+ *= require jquery-ui/datepicker
+ */
 @import "utilities.scss";
 
 /* -------- resets ---------------*/
@@ -76,6 +79,23 @@ select {
         }
       }
 
+      .rs_termination_section {
+        table {
+          margin: 0;
+          padding-top: 5px;
+          td {
+            padding: 0;
+            vertical-align: top;
+          }
+        }
+        .rs_termination_label {margin-right:10px;}
+        .rs_count {width:30px; text-align:center; display: inline-block;}
+      }
+
+      .rs_datepicker {
+        width: 80px;
+        text-align: center;
+      }
 
       .rs_summary { padding:0px; margin-top:15px; border-top:1px solid #ccc;
         span {font-weight:bold; border-top:1px solid #fff; display:block; padding:10px 0 5px 0;}
