--- a/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
+++ b/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
@@ -162,8 +162,11 @@ window.RecurringSelectDialog =
         else
           @until_date.val(@current_rule.hash.until)
       else
-        @never_option = @outer_holder.find "input[name='rs_termination'][value='never']"
-        @never_option.prop('checked', true)
+        //@never_option = @outer_holder.find "input[name='rs_termination'][value='never']"
+        //@never_option.prop('checked', true)
+        @after_option = @outer_holder.find "input[name='rs_termination'][value='after']"
+        @after_option.prop('checked', true)
+        
 
       @all_termination_options = @outer_holder.find ".rs_termination_section input[type='radio'], #rs_occurrence_count, #rs_until_date"
       @all_termination_options.on "change", @terminationChanged
@@ -407,10 +410,10 @@ window.RecurringSelectDialog =
                     <label class='rs_termination_label'>#{$.fn.recurring_select.texts["ends"]}:</label>
                   </td>
                   <td>
-                    <label>
+                    <!--<label>
                       <input type='radio' name='rs_termination' value='never' />
                       #{$.fn.recurring_select.texts["never"]}
-                    </label><br>
+                    </label><br>-->
                     <label>
                       <input type='radio' name='rs_termination' value='count' />
                       #{$.fn.recurring_select.texts["after"]}
