--- a/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
+++ b/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
@@ -410,10 +410,10 @@ window.RecurringSelectDialog =
                     <label class='rs_termination_label'>#{$.fn.recurring_select.texts["ends"]}:</label>
                   </td>
                   <td>
-                    <label>		
+                    <!--<label>		
                         <input type='radio' name='rs_termination' value='never' />		
                         #{$.fn.recurring_select.texts["never"]}		
-                      </label><br>
+                      </label><br>-->
                     <label>
                       <input type='radio' name='rs_termination' value='count' />
                       #{$.fn.recurring_select.texts["after"]}
