--- a/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
+++ b/app/assets/javascripts/recurring_select_dialog.js.coffee.erb
@@ -162,7 +162,7 @@ window.RecurringSelectDialog =
         else
           @until_date.val(@current_rule.hash.until)
       else
-        @never_option = @outer_holder.find "input[name='rs_termination'][value='after']"
+        @never_option = @outer_holder.find "input[name='rs_termination'][value='count']"
         @never_option.prop('checked', true)
         
 
